src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__pou_initializers__initial_values_in_array_of_array_variable.snap
---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@__global_a___init = addrspace(4) global [2 x i8] zeroinitializer
@__global_a__init = addrspace(4) global [2 x [2 x i8]] zeroinitializer
@a = global [2 x [2 x i8]] [[2 x i8] c"\01\02", [2 x i8] c"\03\04"]

