src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__pou_initializers__initialized_array_in_function.snap
---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@__func.arr_var__init = unnamed_addr constant [4 x i32] [i32 1, i32 2, i32 3, i32 4]

define signext i16 @func() {
entry:
  %func = alloca i16, align [filtered]
  %arr_var = alloca [4 x i32], align [filtered]
  call void @llvm.memcpy.p0.p0.i64(ptr align [filtered] %arr_var, ptr align [filtered] @__func.arr_var__init, i64 ptrtoint (ptr getelementptr ([4 x i32], ptr null, i32 1) to i64), i1 false)
  store i16 0, ptr %func, align [filtered]
  %func_ret = load i16, ptr %func, align [filtered]
  ret i16 %func_ret
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias writeonly captures(none), ptr noalias readonly captures(none), i64, i1 immarg) #0

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
