src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__pou_initializers__two_identical_enums_in_different_functions_are_referenced_correctly_with_similar_names.snap
---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: function
---
; ModuleID = 'main'
source_filename = "main"

@x = unnamed_addr constant i32 1
@x.1 = unnamed_addr constant i32 2
@x.2 = unnamed_addr constant i32 1
@y = unnamed_addr constant i32 5
@y.3 = unnamed_addr constant i32 5
@y.4 = unnamed_addr constant i32 5
@x.5 = unnamed_addr constant i32 2
@y.6 = unnamed_addr constant i32 5

define i32 @a() {
entry:
  %a = alloca i32, align 4
  %position = alloca i32, align 4
  store i32 1, i32* %position, align 4
  store i32 0, i32* %a, align 4
  %a_ret = load i32, i32* %a, align 4
  ret i32 %a_ret
}

define i32 @aa() {
entry:
  %aa = alloca i32, align 4
  %position = alloca i32, align 4
  store i32 2, i32* %position, align 4
  store i32 0, i32* %aa, align 4
  %aa_ret = load i32, i32* %aa, align 4
  ret i32 %aa_ret
}

define i32 @bb() {
entry:
  %bb = alloca i32, align 4
  %position = alloca i32, align 4
  store i32 1, i32* %position, align 4
  store i32 0, i32* %bb, align 4
  %bb_ret = load i32, i32* %bb, align 4
  ret i32 %bb_ret
}

define i32 @b() {
entry:
  %b = alloca i32, align 4
  %position = alloca i32, align 4
  store i32 2, i32* %position, align 4
  store i32 0, i32* %b, align 4
  %b_ret = load i32, i32* %b, align 4
  ret i32 %b_ret
}
